yml-coffe-tea/cafe-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
spec:
  #tls:
  #- hosts:
  #  - cafe1.minvu.cl
  #  secretName: cafe-secret
  rules:
  - host: cafe1.minvu.cl
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
